some fixes for tokens