@@ -2,9 +2,13 @@ package com.github.segator.proxylive.stream;
 
 import com.github.segator.proxylive.config.ProxyLiveConfiguration;
 import com.github.segator.proxylive.entity.Channel;
+import org.apache.commons.exec.CommandLine;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 
@@ -35,16 +39,19 @@ public class FFmpegInputStream extends VideoInputStream {
         String encryptionParams = "";
         String defaultVCodec = "copy";
         if(channel.getEncryptionKey()!=null){
-            encryptionParams = "-re -timeout 5 -cenc_decryption_key " + channel.getEncryptionKey() + "  "; //  -fflags +genpts -async 1  -rtbufsize 2000M -probesize 1000000 -analyzeduration 1000000
+            encryptionParams = " -re -timeout 5 -cenc_decryption_key " + channel.getEncryptionKey() + "  "; //  -fflags +genpts -async 1  -rtbufsize 2000M -probesize 1000000 -analyzeduration 1000000
         }
         StringBuilder inputHeaders = new StringBuilder();
         for (Map.Entry<String, String> entry :channel.getSourceHeaders().entrySet()) {
-            inputHeaders.append(String.format(" -headers \"%s:%s\" ", entry.getKey(), entry.getValue()));
+            inputHeaders.append(String.format(" -headers \"%s: %s\"", entry.getKey(), entry.getValue()));
         }
         String ffmpegCommand =  config.getFfmpeg().getPath() + " " + encryptionParams + inputHeaders + " -i " +url + " " + (channel.getFfmpegParameters()!=null?channel.getFfmpegParameters():"") + " -codec " +defaultVCodec + " " + config.getFfmpeg().getMpegTS().getParameters() + " -";
-        process = Runtime.getRuntime().exec(ffmpegCommand);
+        var cli = CommandLine.parse(ffmpegCommand);
+        List<String> commandList = new ArrayList<>();
+        commandList.add(config.getFfmpeg().getPath());
+        commandList.addAll(Arrays.asList(cli.getArguments()));
+        process = new ProcessBuilder( commandList).start();
         ffmpegInputStream = process.getInputStream();
-        System.out.println(ffmpegCommand);
         threadErrorStream = printErrStream(process.getErrorStream(),process);
         return true;
     }
